Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 14.0.0-rc1
-
None
-
Windows 11
-
-
bb0876212 (14.0)
Description
Multi-selection with Alt+Shift and Home or End should select symbols, not create new cursors.
Steps to reproduce:
- open attached "1.txt" file
- create multi cursors in center of lines, as in "initial.jpg"
- press Alt+Shift and End
Expected: right half of lines should be selected, as in "good.jpg"
Actual: new cursors are created at the end of lines, as in "bad.jpg"
Attachments
Issue Links
- mentioned in
-
Page Loading...